Add 'Connect to other agents' section in TOC

--- a/docs/TOC.yml
+++ b/docs/TOC.yml
@@ -169,6 +169,8 @@ items:
         href: agent-builder-tuned-models.md
       - name: Add knowledge sources
         href: agent-builder-add-knowledge.md
+      - name: Connect to other agents
+        href: declarative-agent-connected-agent.md
       - name: Share and manage agents
         href: agent-builder-share-manage-agents.md
       - name: Availability and language support
